TommyLe - Updated loginPopupForm to shift the form align with the signin button. Created a new media for a max-width of 992px to set the margin correctly for that screen size. We may have to do this again for the largest screen size.

--- a/Tinville/static/css/main2.css
+++ b/Tinville/static/css/main2.css
@@ -251,11 +251,20 @@ body {
 }
 
 @media (min-width: 992px) {
-  .loginPopupForm {
+  .loginPopupForm 
+  {
+      margin-right: 2em ;
     /*width: 232px;*/
   }
 }
 
+@media (max-width: 992px) {
+  .loginPopupForm 
+  {
+      margin-right: 3.9em ;
+    /*width: 232px;*/
+  }
+}
 .loginPopupForm {
     background-color: #E7E7E7;
     padding-top: 0%;
